fixed extra space in header component

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,6 +1,9 @@
 @import "../../_globalColor";
 
-
+/*React-headroom*/
+.headroom-wrapper{
+  max-height:100px;
+}
 
 /* header */
 
@@ -91,6 +94,10 @@
   width: 18px;
 }
 
+.header .menu-icon .navicon-dark{
+  background:$textColorDark;
+}
+
 .header .menu-icon .navicon:before,
 .header .menu-icon .navicon:after {
   background: $iconBackground;
@@ -134,7 +141,7 @@
 }
 
 .header .menu-btn:checked ~ .menu-icon .navicon {
-  background: transparent;
+  background: transparent !important;
 }
 
 .header .menu-btn:checked ~ .menu-icon .navicon:before {
